k8s/test-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 80
